// Vitest Snapshot v1

exports[`createSession > calls "cookie.serialize" with correct args 1`] = `
[
  [
    "session",
    "dummyNanoid",
    {
      "expires": 2022-04-01T00:00:00.000Z,
      "httpOnly": true,
      "sameSite": true,
      "secure": true,
    },
  ],
]
`;

exports[`createSession > resolves with a correct value 1`] = `"dummyCookie"`;

exports[`createSession > sends "PutCommand" to DynamoDB with correct args 1`] = `
{
  "Item": {
    "accessToken": "dummyAccessToken",
    "created": 1640995200000,
    "expires": 1648771200000,
    "id": "dummyNanoid",
    "refreshToken": "dummyRefreshToken",
    "userId": "dummySub ",
  },
  "TableName": "TripPics-Sessions",
}
`;

exports[`createSession > when "envName" is "personal" > calls "cookie.serialize" with correct args 1`] = `
[
  [
    "session",
    "dummyNanoid",
    {
      "expires": 2022-04-01T00:00:00.000Z,
      "httpOnly": true,
      "sameSite": "none",
      "secure": true,
    },
  ],
]
`;
